add eslint ptettier deps tailwind ts config etc.

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: Montserrat;
+    src: url("./assets/fonts/Montserrat-Light.ttf") format("opentype");
+    font-weight: 300;
+}
+@font-face {
+    font-family: Montserrat;
+    src: url("./assets/fonts/Montserrat-Medium.ttf") format("opentype");
+    font-weight: 400;
+}
+@font-face {
+    font-family: Montserrat;
+    src: url("./assets/fonts/Montserrat-Regular.ttf") format("opentype");
+    font-weight: 500;
+}
+@font-face {
+    font-family: Montserrat;
+    src: url("./assets/fonts/Montserrat-SemiBold.ttf") format("opentype");
+    font-weight: 600;
+}
+
 body {
-  margin: 0;
-  padding: 0;
+    font-family: Montserrat;
+    margin: 0;
+    padding: 0;
 }
 p {
-  margin: 0;
+    margin: 0;
 }
